--- a/BlokeeAutomation/BlokusApplication/GameRoom/PlayGame.xaml
+++ b/BlokeeAutomation/BlokusApplication/GameRoom/PlayGame.xaml
@@ -7,10 +7,10 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>863,2322</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>863,2639</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>PlayGame_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
-    <scg:List x:TypeArguments="x:String" Capacity="64">
+    <scg:List x:TypeArguments="x:String" Capacity="33">
       <x:String>System.Activities</x:String>
       <x:String>System.Activities.Statements</x:String>
       <x:String>System.Activities.Expressions</x:String>
@@ -47,7 +47,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="60">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="31">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -81,7 +81,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="PlayGame" sap:VirtualizedContainerService.HintSize="499,2257" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="PlayGame" sap:VirtualizedContainerService.HintSize="499,2574" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Boolean" Name="gameOver" />
       <Variable x:TypeArguments="x:Int32" Name="playerIndex" />
@@ -124,18 +124,18 @@
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="457,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Player Index in current game: &quot; + PlayerIndex.ToString]" />
-    <ui:InterruptibleWhile Condition="[not gameOver]" DisplayName="While the game is not finished" sap:VirtualizedContainerService.HintSize="457,1713" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
+    <ui:InterruptibleWhile Condition="[not gameOver]" DisplayName="While the game is not finished" sap:VirtualizedContainerService.HintSize="457,2030" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
       <ui:InterruptibleWhile.Body>
-        <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="421,1548" sap2010:WorkflowViewState.IdRef="Sequence_2">
+        <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="421,1865" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <Sequence.Variables>
             <Variable x:TypeArguments="x:String" Name="result" />
             <Variable x:TypeArguments="njl:JObject" Name="BlokusStatus" />
             <Variable x:TypeArguments="x:Int32" Name="pieceIndex" />
             <Variable x:TypeArguments="x:Int32" Name="orientation" />
             <Variable x:TypeArguments="x:Int32" Name="positionX" />
-            <Variable x:TypeArguments="x:Int32" Name="postitionY" />
-            <Variable x:TypeArguments="x:String" Name="variable1" />
+            <Variable x:TypeArguments="x:Int32" Name="positionY" />
             <Variable x:TypeArguments="s:Boolean[]" Name="pieceAvailability" />
+            <Variable x:TypeArguments="x:Boolean" Name="moveExists" />
           </Sequence.Variables>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -158,6 +158,24 @@
               <InArgument x:TypeArguments="x:Int32" x:Key="in_PlayerIndex">[playerIndex]</InArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
+          <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="379,51" sap2010:WorkflowViewState.IdRef="CommentOut_2">
+            <ui:CommentOut.Body>
+              <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="376,151" sap2010:WorkflowViewState.IdRef="Sequence_5">
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
+                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Your Time To Act&quot;]" />
+              </Sequence>
+            </ui:CommentOut.Body>
+            <sap:WorkflowViewStateService.ViewState>
+              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                <x:Boolean x:Key="IsPinned">False</x:Boolean>
+              </scg:Dictionary>
+            </sap:WorkflowViewStateService.ViewState>
+          </ui:CommentOut>
           <ui:GetAttribute ContinueOnError="{x:Null}" Attribute="uipath-automation-data" DisplayName="Get Blokus Latest Status" sap:VirtualizedContainerService.HintSize="379,134" sap2010:WorkflowViewState.IdRef="GetAttribute_1">
             <ui:GetAttribute.Result>
               <OutArgument x:TypeArguments="x:String">[result]</OutArgument>
@@ -170,17 +188,40 @@
               </ui:Target>
             </ui:GetAttribute.Target>
           </ui:GetAttribute>
-          <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="379,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Your Time To Act&quot;]" />
+          <ui:DeserializeJson x:TypeArguments="njl:JObject" DisplayName="Deserialize JSON" sap:VirtualizedContainerService.HintSize="379,59" sap2010:WorkflowViewState.IdRef="DeserializeJson`1_1" JsonObject="[BlokusStatus]" JsonString="[result.replace(&quot;null&quot;,&quot;-1&quot;)]" />
           <Assign sap:VirtualizedContainerService.HintSize="379,60" sap2010:WorkflowViewState.IdRef="Assign_3">
             <Assign.To>
               <OutArgument x:TypeArguments="s:Boolean[]">[pieceAvailability]</OutArgument>
             </Assign.To>
             <Assign.Value>
-              <InArgument x:TypeArguments="s:Boolean[]">[new bool(21)]</InArgument>
+              <InArgument x:TypeArguments="s:Boolean[]">[Enumerable.Repeat(true, 21).ToArray()]</InArgument>
             </Assign.Value>
           </Assign>
-          <ba:PlayBlokeeMove Column="{x:Null}" MoveExists="{x:Null}" Orientation="{x:Null}" PieceId="{x:Null}" PlayerId="{x:Null}" Row="{x:Null}" AvailablePieces="[BlokusStatus(&quot;enemyMoves&quot;)(index).ToList().ForEach(function(id){ return pieceAvailability(PlayerIndex) = false})]" BoardJson="[BlokusStatus(&quot;gameBoard&quot;).ToString.Replace(vbCrLf ,&quot;&quot;)]" DisplayName="Play blokee move" sap:VirtualizedContainerService.HintSize="379,22" sap2010:WorkflowViewState.IdRef="PlayBlokeeMove_1" />
-          <ui:DeserializeJson x:TypeArguments="njl:JObject" DisplayName="Deserialize JSON" sap:VirtualizedContainerService.HintSize="379,59" sap2010:WorkflowViewState.IdRef="DeserializeJson`1_1" JsonObject="[BlokusStatus]" JsonString="[result.replace(&quot;null&quot;,&quot;-1&quot;)]" />
+          <ui:ForEach x:TypeArguments="njl:JValue" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="379,285" sap2010:WorkflowViewState.IdRef="ForEach`1_4" Values="[BlokusStatus(&quot;enemyMoves&quot;)(PlayerIndex)]">
+            <ui:ForEach.Body>
+              <ActivityAction x:TypeArguments="njl:JValue">
+                <ActivityAction.Argument>
+                  <DelegateInArgument x:TypeArguments="njl:JValue" Name="item" />
+                </ActivityAction.Argument>
+                <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="304,152" sap2010:WorkflowViewState.IdRef="Sequence_4">
+                  <sap:WorkflowViewStateService.ViewState>
+                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    </scg:Dictionary>
+                  </sap:WorkflowViewStateService.ViewState>
+                  <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_4">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:Boolean">[pieceAvailability(cint(item.ToString))]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:Boolean">False</InArgument>
+                    </Assign.Value>
+                  </Assign>
+                </Sequence>
+              </ActivityAction>
+            </ui:ForEach.Body>
+          </ui:ForEach>
+          <ba:PlayBlokeeMove AvailablePieces="[pieceAvailability]" BoardJson="[BlokusStatus(&quot;gameBoard&quot;).ToString.Replace(vbCrLf ,&quot;&quot;)]" Column="[positionY]" DisplayName="Play blokee move" sap:VirtualizedContainerService.HintSize="379,22" sap2010:WorkflowViewState.IdRef="PlayBlokeeMove_1" MoveExists="[moveExists]" Orientation="[orientation]" PieceId="[pieceIndex]" PlayerId="[playerIndex]" Row="[positionX]" />
           <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="379,59" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;Board: &quot; + BlokusStatus(&quot;gameBoard&quot;).ToString.Replace(vbCrLf ,&quot;&quot;)]" />
           <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="379,59" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;Player Moves: &quot; + BlokusStatus(&quot;enemyMoves&quot;).ToString.Replace(vbCrLf ,&quot;&quot;)]" />
           <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="379,51" sap2010:WorkflowViewState.IdRef="CommentOut_1">
@@ -232,7 +273,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_5">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">0</InArgument>
@@ -270,7 +311,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_9">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">0</InArgument>
@@ -308,7 +349,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_13">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">19</InArgument>
@@ -346,7 +387,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_17">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">19</InArgument>
@@ -392,7 +433,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_21">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">1</InArgument>
@@ -430,7 +471,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_25">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">1</InArgument>
@@ -468,7 +509,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_29">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">17</InArgument>
@@ -506,7 +547,7 @@
                           </ui:AssignOperation>
                           <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_33">
                             <ui:AssignOperation.To>
-                              <OutArgument x:TypeArguments="x:Int32">[postitionY]</OutArgument>
+                              <OutArgument x:TypeArguments="x:Int32">[positionY]</OutArgument>
                             </ui:AssignOperation.To>
                             <ui:AssignOperation.Value>
                               <InArgument x:TypeArguments="x:Int32">17</InArgument>
@@ -539,7 +580,7 @@
               <InArgument x:TypeArguments="x:Int32" x:Key="in_pieceIndex">[pieceIndex]</InArgument>
               <InArgument x:TypeArguments="x:Int32" x:Key="in_orientation">[orientation]</InArgument>
               <InArgument x:TypeArguments="x:Int32" x:Key="in_positionX">[positionX]</InArgument>
-              <InArgument x:TypeArguments="x:Int32" x:Key="in_positionY">[postitionY]</InArgument>
+              <InArgument x:TypeArguments="x:Int32" x:Key="in_positionY">[positionY]</InArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
           <Assign sap:VirtualizedContainerService.HintSize="379,60" sap2010:WorkflowViewState.IdRef="Assign_2">
